# experience-memory

./: .gitignore  MIGRATION_PLAN.md  README.md  pyproject.toml
benchmarks/: __init__.py  exp_dream_coverage.py  exp_error_elimination.py  exp_hash_collisions.py  exp_lookup_latency.py  exp_memory_decay.py
examples/: demo_decay.py  demo_learn_from_failure.py  demo_proactive_dreaming.py
experience_memory/: __init__.py  decay.py  dream_generator.py  semantic_cache.py
src/: background_processor.py  error_taxonomy.py  fix_registry.py
tests/: test_dreaming.py  test_registry.py  test_semantic_cache.py  test_taxonomy.py
