[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "experience-memory"
version = "0.1.0"
description = "A paradigm-neutral library for O(1) error correction and proactive dreaming."
readme = "README.md"
authors = [
    {name = "Rohan Vinaik", email = "rohanvinaik@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false
